[package]
authors = ["Cytosine2020", "victoryang00"]
edition = "2021"
name = "MVVM"
version = "0.1.0"

[dependencies]
bytemuck = "1.9.1"
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.30"
wasmtime = "^0"
wasmtime-jit = "0.36.0"
wasmtime-wasi = "^0"
zero = "0.1.2"
[lib]
crate-type = ["cdylib", "rlib"]
